RESOLVED FIXED 253034
REGRESSION(260575@main) Tapping PiP Button Crashes UIProcess in -[WebAVPlayerLayer setVideoGravity:]
https://bugs.webkit.org/show_bug.cgi?id=253034
Summary REGRESSION(260575@main) Tapping PiP Button Crashes UIProcess in -[WebAVPlayer...
Jer Noble
Reported 2023-02-27 15:01:40 PST
REGRESSION(260575@main) Tapping PiP Button Crashes UIProcess in -[WebAVPlayerLayer setVideoGravity:]
Attachments
Jer Noble
Comment 1 2023-02-27 15:01:48 PST
Jer Noble
Comment 2 2023-02-27 15:05:24 PST
EWS
Comment 3 2023-02-28 07:51:13 PST
Committed 260943@main (ba27ab71c4d7): <https://commits.webkit.org/260943@main> Reviewed commits have been landed. Closing PR #10762 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.