Cherry-pick ba27ab71c4d7. rdar://problem/105992124

REGRESSION(260575@main) Tapping PiP Button Crashes UIProcess in -[WebAVPlayerLayer setVideoGravity:]
    https://bugs.webkit.org/show_bug.cgi?id=253034
    rdar://105992124

    Reviewed by Simon Fraser.

    -setVideoGravity is dereferencing _fullscreenInterface unconditionally, and by chance _fullscreenInterface is
    nil when entering PiP mode.

    Call -setFullscreenInterface: earlier in the process of moving video playback to the PiP window, and as a belt-
    and-suspenders technique, also nil check _fullscreennInterface before dereferencing it in WebAVPlayerLayer.

    * Source/WebCore/platform/cocoa/WebAVPlayerLayer.mm:
    (-[WebAVPlayerLayer resolveBounds]):
    (-[WebAVPlayerLayer setVideoGravity:]):
    * Source/WebCore/platform/cocoa/WebAVPlayerLayerView.mm:
    (WebCore::WebAVPlayerLayerView_startRoutingVideoToPictureInPicturePlayerLayerView):

    Canonical link: https://commits.webkit.org/260943@main

Canonical link: https://commits.webkit.org/260848.2@safari-7616.1.4-branch